<resources>
    <string name="app_name">ifelse</string>
    <string name="final_value">Nilai Hasil Akhir</string>
    <string name="enter_value">Masukkan Nilai</string>
    <string name="results">Hasil</string>
    <string name="your_value">Nilai Yang Anda Dapatkan</string>
    <string name="name">Nama : Qiswatul Ulfah</string>
    <string name="nim_g_231_17_0032">Nim : G.231.17.0032</string>
</resources>
